tests/negative/gold/abstract8-test.gold
tests/negative/abstract8-test.toit:6:12: error: Abstract members can't have bodies
  abstract foo:
           ^~~
Compilation failed
